setup basic layout for resume page

--- a/index.html
+++ b/index.html
@@ -2,13 +2,38 @@
 <html lang="en">
 <head>
 	<!-- Required meta tags -->
-	<meta charset="utf-8>
-	<meta name="viewport" content="width=device-width, initail-scale=1, shrink-to-fit=no">
-	
-	<title>Reale Home - Cloud Resume Challenge</title>
+	<meta charset="utf-8/>
+	<meta name="viewport" content="width=device-width, initail-scale=1, shrink-to-fit=no"/>
+	<meta name="description" content="This page serves as my capstone of the AWS Cloud Resome Challenge"/>
+	<meta name="keywords" content="web design, AWS, Cloud Resume Challenge, CRC, cloud"/>
+
+	<title>Reale CRC Resume</title>
+	<link rel="icon" href="favico.ico" type="image/x-icon"/>
 
 </head>
-<body>
 
-</body>
+
+<div class="total"> <!-- Start of "total" CSS class div for total site styling-->
+
+	<body>
+		<div id="header">
+			<h1>About Me</h1>
+			<p title="About Me">A blerb about me</p>
+		</div> <!-- End of "header" div-->
+
+		<div id="content">
+			<h3>Resume</h3>
+			<p title="Resume">Herein lies my resume</p>
+		</div> <!-- End of "content" div-->
+
+		<div id="side-bar">
+			<h6>Navigation</h6>
+		</div> <!-- End of "side-bar" div-->
+
+		<div id="footer">
+			<h4>References</h4>
+			<p>W3Schools, etc.</p>
+		</div> <!-- End of "footer" div -->
+	</body>
+</div> <!-- End of "total" CSS class div-->
 </html>
