Filled out Resume section

--- a/index.html
+++ b/index.html
@@ -9,31 +9,97 @@
 
 	<title>Reale CRC Resume</title>
 	<link rel="icon" href="favico.ico" type="image/x-icon"/>
-
 </head>
 
-
 <div class="total"> <!-- Start of "total" CSS class div for total site styling-->
-
 	<body>
-		<div id="header">
-			<h1>About Me</h1>
-			<p title="About Me">A blerb about me</p>
-		</div> <!-- End of "header" div-->
+		<div class="container">
+			<div id="header">
+				<h1>About Me</h1>
+				<p title="About Me">A blerb about me</p>
+			</div> <!-- End of "header" div-->
+		</div> <!-- End of "conatiner" class div-->
 
-		<div id="content">
-			<h3>Resume</h3>
-			<p title="Resume">Herein lies my resume</p>
-		</div> <!-- End of "content" div-->
+		<div class="mainContent">
+			<div id="content">
+				<h3>Resume</h3>
+				<p title="Resume">Herein lies my resume</p>
+				
+				<article>
+					<h4>Certifications</h4>
+					<ul>
+						<li>EC-Council CNDA, May 2024</li>
+						<li>EC-Council CEH, July 2023</li>
+						<li>CompTIA CySA+, May 2023</li>
+						<li>CompTIA Cloud+, October 2022</li>
+						<li>CompTIA Network+, February 2022</li>
+						<li>CompTIA Security+, September 2017</li>
+						<li>More to come.....</li>
+					</ul>
+				</article>
 
-		<div id="side-bar">
-			<h6>Navigation</h6>
-		</div> <!-- End of "side-bar" div-->
+				<article>
+					<h4>Experience</h4>
+				</article>
+				
+				<article>
+					<h5>Network Watch Officer @ US Army, Arlington, VA</h5>
+					<p class="dateDetail">July 2021 - Present</p>
+					<p>Responsible for network oversight, incident management, and incident reporting of critical networks, links, and services for the National Capitol Region<br>
+Responsible for the implemented battle rhythms, training paths, and shift operational reports<br>
+Directly supports over 45,000 customers across 80 remote locations; indirectly supporting NMCC, JCS, OSD, and HQDA</p>
+				</article>
 
-		<div id="footer">
-			<h4>References</h4>
-			<p>W3Schools, etc.</p>
-		</div> <!-- End of "footer" div -->
+				<article>
+					<h5>Senior IT Manager @ US Army, Fort Drum, NY</h5>
+					<p class="dateDetail">August 2020 - July 2021</p>
+					<p>Responsible for providing dedicated automation support to various logistics automation systems, including CSS-VSAT, CAISI 2.0, and GCSS-Army<br>
+Led effort for GCSS Hand Held Tablet (HHT) deployment through 1st Brigade Combat Team, expanding unit logistical capabilities with over 70 mobile systems<br>
+Prepared, set up, and accounted for 150 pieces of automations equipment during five battalion exercises with zero losses in equipment</p>
+				</article>
+
+				<article>
+					<h5>Senior Manager @ US Army, Fort Drum, NY</h5>
+					<p class="dateDetail">February 2020 - July 2020</p>
+					<p>Provided top-notch IT service and support to over 3,000 end users ensuring forward and rear command teams maintained communications as their Soldiers traversed the globe and moved in and out of theater in support of Operation Freedom Sentinel<br>
+Displayed keen intellect and competence, ensuring the brigade maintained global communications while assessing, combating, and mitigating risk during the COVID-19 pandemic<br>
+Provided flawless communications support on multiple platforms as the Brigade Combat Team Soldiers crossed three continents during the pandemic, and efforts aided in reducing the risk of exposure with zero deficiencies</p>
+				</article>
+
+				<article>
+					<h5>Automations Team Lead @ US Army, Fort Drum, NY</h5>
+					<p class="dateDetail">February 2018 - July 2020</p>
+					<p>Lead team in providing WIN-T services to battalion<br>
+Demonstrated superb technical prowess and outstanding leadership during the 3Q19 WIN-T Upgrade<br>
+Managed, configured, and maintained Tactical Communications for Battalion, influencing Upper TI Services at the FORSCOM level</p>
+				</article>
+
+				<article>
+					<h5>LAN Manager @ US Army, Fort Drum, NY</h5>
+					<p class="dateDetail">February 2017 - July 2020</p>
+					<p>Provided IT services and support to over 450 Soldiers across the Brigade Support Battalion on both the DoD Information Network and the Warfighter Information Network-Tactical<br>
+Prepared the battalion's COMSEC account in support of battalion exercises; allowing the battalion to establish and maintain secure communications<br>
+Demonstrated peerless dedication and adaptability by achieving proficiency in operating and maintaining the Tactical Communications Node (TCN) in under a week to allow the battalion to maintain access to the tactical network, directly contributing to the success of the battalion’s mission to support the brigade</p>
+				</article>
+
+				<article>
+					<h4>Education</h4>
+				</article>
+
+				<article>
+					<h5>B.A. in Philosophy @ St. John's University, Queens, NY</h5>
+				</article>
+			</div> <!-- End of "content" div-->
+
+			<div id="side-bar">
+				<h6>Navigation</h6>
+			</div> <!-- End of "side-bar" div-->
+
+			<div id="footer">
+				<h4>References</h4>
+				<p>W3Schools, etc.</p>
+			</div> <!-- End of "footer" div -->
+		</div> <!-- End of "mainContent" class div-->
 	</body>
 </div> <!-- End of "total" CSS class div-->
 </html>
