Added about me blerb

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
 		<div class="container">
 			<div id="header">
 				<h1>About Me</h1>
-				<p title="About Me">A blerb about me</p>
+				<p title="About Me">I am an IT nerd with expierience in both professional and hobbyist realms. I enjoy learning new tools and techniques, both inside my field and in areas well outside of it. I live according to the principle that Eureka moments don't occur from understanding a specific field but from fields outside, and sometimes completely irrelevant, to the original problem. That may be the philosopher in me talking, but the poet agrees, for how else could the majesty of the sky be connected to the beauty of love, or the power of mountains be compared to the sturdiness of a father.</p>
 			</div> <!-- End of "header" div-->
 		</div> <!-- End of "conatiner" class div-->
 
 		<div class="mainContent">
 			<div id="content">
 				<h3>Resume</h3>
-				<p title="Resume">Herein lies my resume</p>
+				<p title="Resume">Senior IT professional and transitioning Military Veteran with over 7 years of advanced technical and operational training. Able to manage and supervise teams and direct day-to-day work activity. Creative, resourceful and flexible, able to adapt to changing priorities and maintain a positive attitude and strong work ethic, with a strong familiarity with Linux, SharePoint, Python, and Proxmox.</p>
 				
 				<article>
 					<h4>Certifications</h4>
