--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 	<title>Reale CRC Resume</title>
 	<link rel="icon" href="favico.ico" type="image/x-icon"/>
+	<link rel="stylesheet" href="sytles.css"/>
 </head>
 
 <div class="total"> <!-- Start of "total" CSS class div for total site styling-->
