--- a/website/index.html
+++ b/website/index.html
@@ -10,6 +10,7 @@
 	<title>Reale CRC Resume</title>
 	<link rel="icon" href="favico.ico" type="image/x-icon"/>
 	<link rel="stylesheet" href="styles.css"/>
+	<link rel="sytlesheet" href="bootstrap/css/bootstrap.min.css">
 </head>
 
 <div class="total"> <!-- Start of "total" CSS class div for total site styling-->
@@ -98,6 +99,8 @@
 
 		<div class="clear"></div>
 
+		<script src="jquery-3.7.1.min.js"></script>
+		<script src="bootstrap/js/bootstrap.min.js"></script>
 	</body>
 </div> <!-- End of "total" CSS class div-->
 </html>
