--- a/website/index.html
+++ b/website/index.html
@@ -15,6 +15,25 @@
 
 <div class="total"> <!-- Start of "total" CSS class div for total site styling-->
 	<body>
+		<nav class="navbar navbar-expand-md">
+			<a class="navbar-brand" href="#">Logo</a>
+			<button class="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target="#main-navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="main-navigation">
+				<ul class="navbar-nav">
+					<li class="nav-item">
+						<a class="nav-link" href="#">Home</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">About</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Contact</a>
+					</li>
+				</ul>
+			</div>
+		</nav>
 		<div class="heading">
 			<h1>About Me</h1>
 			<p title="About Me">I am an IT nerd with expierience in both professional and hobbyist realms. I enjoy learning new tools and techniques, both inside my field and in areas well outside of it. I live according to the principle that Eureka moments don't occur from understanding a specific field but from fields outside, and sometimes completely irrelevant, to the original problem. That may be the philosopher in me talking, but the poet agrees, for how else could the majesty of the sky be connected to the beauty of love, or the power of mountains be compared to the sturdiness of a father.</p>
