--- a/website/index.html
+++ b/website/index.html
@@ -211,6 +211,7 @@
             </section>
         </div>
         <!-- Bootstrap core JS-->
+        <script src="bootstrap/jquery-3.7.1.min.js"></script>
         <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
