--- a/website/index.html
+++ b/website/index.html
@@ -45,9 +45,9 @@
                     </h1>
                     <div class="subheading mb-5">
                         Arlington, VA 22202 · 
-                        <a href="https://realewanderer.net">realewanderer.net</a>
+                        <a href="https://realewanderer.net">Website</a>
                         · 
-                        <a href="mailto:jreale@realewanderer.net">jreale@realewanderer.net</a>
+                        <a href="mailto:jreale@realewanderer.net">Email</a>
                     </div>
                     <p class="lead mb-5">I am a Senior IT professional and transitioning Military Veteran with over 7 years of advanced technical and operational training. Able to manage and supervise teams and direct day-to-day work activity. Creative, resourceful and flexible, able to adapt to changing priorities and maintain a positive attitude and strong work ethic, with a strong familiarity with Linux, SharePoint, Python, and Proxmox.</p>
                     <div class="social-icons">
@@ -62,6 +62,14 @@
             <section class="resume-section" id="experience">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Experience</h2>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">DevOps Engineer - Systems Administrator</h3>
+                            <div class="subheading mb-3">Booz Allen Hamilton, Arlington, VA</div>
+                            <p>Collagorated with an Agile team to achieve project goals for DevOps orientation application.<br> Designed, Implemented, and Maintained a CI/CD pipeline for a team of 16 using GitHub Actions.<br> Created infrastructure as code (IaC) templates to provision and manage cloud resources using Terraform.<br> Enhanced application security and deployment efficiency by implementing Snyk and SonarQube for best practices and continuous integration strategies.<br> Leveraged AWS, GitHub, Docker, Kubernetes, Jenkins, Terraform, Ansible during development to automate deployments, integration, and versioning.</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">May 2024 - July 2024</span></div>
+                    </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Network Watch Officer</h3>
