--- a/website/index.html
+++ b/website/index.html
@@ -53,19 +53,12 @@
                         <span class="text-primary">Reale</span>
                     </h1>
                     <div class="subheading mb-5">
-<<<<<<< HEAD
-                        Arlington, VA 22202 · 
-                        <a href="https://realewanderer.net">Website</a>
-                        · 
-                        <a href="mailto:jreale@realewanderer.net">Email</a>
-=======
                         Alexandria, VA 22309 · 
-                        <a href="https://realewanderer.net">realewanderer.net</a>
+                        <a href="https://realewanderer.net">Website - realewanderer.net</a>
                         · 
-                        <a href="mailto:jreale@realewanderer.net">jreale@realewanderer.net</a>
+                        <a href="mailto:jreale@realewanderer.net">Email - jreale@realewanderer.net</a>
                         · Visitor Number:
                         <span id="visitor_counter" />
->>>>>>> 281b92c7b04f3a9011b59403075580136e445e5c
                     </div>
                     <p class="lead mb-5">I am a Senior IT professional and transitioning Military Veteran with over 7 years of advanced technical and operational training. Able to manage and supervise teams and direct day-to-day work activity. Creative, resourceful and flexible, able to adapt to changing priorities and maintain a positive attitude and strong work ethic, with a strong familiarity with Linux, SharePoint, Python, and Proxmox.</p>
                     <div class="social-icons">
