changed about me

--- a/website/index.html
+++ b/website/index.html
@@ -60,7 +60,7 @@
                         · Visitor Number:
                         <span id="visitor_counter" />
                     </div>
-                    <p class="lead mb-5">I am a Senior IT professional and transitioning Military Veteran with over 7 years of advanced technical and operational training. Able to manage and supervise teams and direct day-to-day work activity. Creative, resourceful and flexible, able to adapt to changing priorities and maintain a positive attitude and strong work ethic, with a strong familiarity with Linux, SharePoint, Python, and Proxmox.</p>
+                    <p class="lead mb-5">I am a Senior IT professional and Military Veteran with over 7 years of advanced technical and operational training. Able to manage and supervise teams and direct day-to-day work activity. Creative, resourceful and flexible, able to adapt to changing priorities and maintain a positive attitude and strong work ethic, with a strong familiarity with Linux, SharePoint, Python, and Proxmox.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/john-reale-iv/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/JRFour"><i class="fab fa-github"></i></a>
